ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: neta-wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress
        image: k8s.gcr.io/ingress-nginx/controller:v1.2.0
        args:
          - "/nginx-ingress-controller"
        ports:
          - containerPort: 80
