mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: neta-wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None  # Required for StatefulSet
