wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: neta-wordpress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress
